--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,6 +1,23 @@
+header{
+    background-color: lightblue;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    position: sticky;
+    top: 0;
+}
 body{
     background-color: orange;
     font-family: courier;
+}
+nav{
+    width: 150px;
+    position: relative;
+}
+ul{
+    display: none;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+nav:hover ul{
+    display: block;
 }
 div{
     border: .5px solid;
