--- a/CSS/main.css
+++ b/CSS/main.css
@@ -9,15 +9,17 @@ body{
     font-family: courier;
 }
 nav{
-    width: 150px;
+    width: 200px;
     position: relative;
 }
 ul{
-    display: none;
+    /* display: none; */
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    /* width: 200px; */
 }
 nav:hover ul{
     display: block;
+    width: 200px;
 }
 div{
     border: .5px solid;
