--- a/CSS/main.css
+++ b/CSS/main.css
@@ -48,6 +48,7 @@ img{
     position: fixed relative;
     padding: 20px;
     background-color: #dddddd;
+    display: inline-block;
 }
 .highlights{font-family: armenian;}
 li a{
